<resources>
    <!-- General -->
    <string name="loading_message">Loading…</string>
    <string name="common_general_error">Error occurred</string>
    <string name="common_ok_action" translatable="false">OK</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_subtitle" translatable="false">@string/app_name</string>
    <string name="settings_access_title">Notifications Service Access</string>
    <string name="settings_battery_optimization">Battery Optimization</string>
    <string name="settings_permissions">Permissions</string>
    <string name="settings_access_enabled">The notification service is currently enabled</string>
    <string name="settings_access_manage">Manage Access</string>
    <string name="settings_reminder">Reminder Settings</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_scheduler">Custom Scheduler</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_applications_select_title">Applications to monitor
        for missed notifications</string>
    <string name="settings_applications_select_button">Select Applications</string>
    <string name="menu_advanced_settings_visible">Show Advanced Settings</string>
    <string name="menu_show_logs">Show Logs</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="menu_contribute">Contribute</string>
    <string name="menu_night_mode">Dark Mode</string>
    <string name="menu_night_mode_follow_system">Follow System</string>
    <string name="menu_night_yes">Enabled</string>
    <string name="menu_night_mode_no">Disabled</string>

    <!-- Permissions settings -->
    <string name="settings_permissions_required">The following permissions are required for the app work: \"%1$s\". Please allow them.</string>
    <string name="settings_permissions_grant">Grant required permissions</string>

    <!-- Battery optimization settings -->
    <string name="settings_battery_optimization_disabled"><![CDATA[
    The application is already excluded from battery optimization<br/><br/>
    Some devices may have additional battery usage limitation settings.
    If you experience issues with the app please check
    <u><a href="https://dontkillmyapp.com/">https://dontkillmyapp.com</a></u>
    website for possible solution]]></string>
    <string name="settings_battery_optimization_enabled">The Android OS optimizes battery usage for the application.
        If you experience problems with the reminder work please disable battery optimization for the "Missed Notification Reminder" application</string>
    <string name="settings_manage_battery_optimization">Manage Battery Optimization</string>
    <string name="settings_battery_wakelock_disabled">Foreground service disabled. Adjust if you experience issues with app stable work</string>
    <string name="settings_battery_wakelock_enabled">Foreground service is enabled. Use this only if you experience issues with the reminder work. This will keep device ON all the time while reminder interval is scheduled</string>

    <!-- Reminder Settings -->
    <string name="reminder_interval_hint">Reminder Interval (minutes)</string>
    <string name="reminder_repeats_hint">Reminder Repetitions (max)</string>
    <string name="reminder_disabled">Disabled</string>
    <string name="reminder_enabled">Enabled</string>
    <string name="limit_reminder_repeats_disabled">Reminder will repeat forever</string>
    <string name="limit_reminder_repeats_enabled">Reminder will repeat limited number of times</string>
    <string name="create_dismiss_notification_disabled">Do not create extra notification</string>
    <string name="create_dismiss_notification_enabled">Create extra notification when reminders are active to allow stopping them without dismissing notification(s) from other apps</string>
    <string name="create_dismiss_notification_immediately_disabled">Create extra notification when the first reminder event occurs</string>
    <string name="create_dismiss_notification_immediately_enabled">Create extra notification immediately after any monitored app have posted notification</string>
    <string name="wakelock_disabled">Do not keep device awake (RECOMMENDED)</string>
    <string name="wakelock_enabled">Keep device awake (WARNING, use this only if you experience issues with the reminder work. This will keep device ON all the time while reminder interval is scheduled)</string>

    <!-- Scheduler-->
    <string name="scheduler_begin_hint">Begins at</string>
    <string name="scheduler_end_hint">Ends at</string>
    <string name="scheduler_disabled">Disabled</string>
    <string name="scheduler_enabled">Enabled</string>
    <string name="scheduler_working_period">Working Period</string>
    <string name="scheduler_disabled_period">Disabled Period</string>

    <!-- Sound -->
    <string name="sound_reminder_ringtone_button">Reminder Ringtone</string>
    <string name="sound_select_ringtone_dialog_title">Select Ringtone</string>

    <!-- Vibration -->
    <string name="vibration_disabled">Disabled</string>
    <string name="vibration_enabled">Enabled</string>
    <string name="vibration_pattern_hint">Vibration Pattern</string>
    <string name="vibration_pattern_error">Pattern must be specified as a list of integers separated by commas. The first value indicates the number of milliseconds to wait before turning the vibrator on. The next value indicates the number of milliseconds for which to keep the vibrator on before turning it off. Subsequent values alternate between durations in milliseconds to turn the vibrator off or to turn the vibrator on. Example: 0, 100, 50, 100, 200</string>

    <!-- Application selection-->
    <string name="ignore_persistent_notifications_disabled">Do not ignore ongoing (persistent) notifications</string>
    <string name="ignore_persistent_notifications_enabled">Ignore ongoing (persistent) notifications</string>
    <string name="remind_when_screen_is_on_disabled">Do not remind while screen is turned on</string>
    <string name="remind_when_screen_is_on_enabled">Remind while screen is turned on</string>
    <string name="respect_phone_calls_disabled">Remind while phone call is active</string>
    <string name="respect_phone_calls_enabled">Do not remind while phone call is active</string>
    <string name="respect_ringer_mode_disabled">Ignore device audio profile (Keep remind in silent mode)</string>
    <string name="respect_ringer_mode_enabled">Check device audio profile (Do not remind in silent mode)</string>

    <!-- Applications selection activity -->
    <string name="applications_selection_title">Applications selection</string>
    <!-- Applications selection list -->
    <string name="applications_error_title">Oops!</string>
    <string name="applications_error_message">
        An error occurred loading the application data.\nPlease try again later.
    </string>
    <string name="applications_empty_title">Weird…</string>
    <string name="applications_empty_message">
        There doesn\'t seem to be\nany applications available.
    </string>

    <!-- Dismiss notification -->
    <string name="dismiss_notification_title">Reminder is active</string>
    <string name="dismiss_notification_text">Dismiss this notification to stop reminders.</string>
    <string name="dismiss_action">Dismiss</string>
    <string name="contribute_action" translatable="false">@string/menu_contribute</string>
    <string name="rate_action" translatable="false">@string/menu_rate_app</string>

    <!-- Purchase -->
    <string name="payment_error_billing_unavailable">Billing unavailable</string>
    <string name="payment_error_service_unavailable">Service unavailable</string>
    <string name="payment_error_user_canceled">Purchase canceled</string>
    <string name="payment_error_purchase_pending">The purchase is pending!</string>
    <string name="contribution_title">Support development</string>
    <string name="contribution_contribute_options"><![CDATA[
    You may contribute either via creating an issue or pull request in the project
    <u><a href="https://github.com/httpdispatch/MissedNotificationsReminder">github repository</a></u>
    <br/><br/>
    Or you may purchase some of the items to support development. <b>Note</b> that purchasing any item <b>doesn\'t unlock</b> any features yet]]></string>
    <string name="contribution_action_purchase">Buy</string>
    <string name="payment_loading_purchase_items">Loading…</string>
    <string name="payment_purchasing">Purchasing…</string>
    <string name="payment_purchase_done">Thanks for support!</string>
    <string name="payment_contributions">Your contributions: %s</string>

</resources>
