<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="parentModel"
            type="com.app.missednotificationsreminder.binding.model.SettingsViewModel"/>
        <variable
            name="model"
            type="com.app.missednotificationsreminder.binding.model.ReminderViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{model.enabled.get() ? @string/reminder_enabled : @string/reminder_disabled}"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/reminder_disabled"
            android:textOn="@string/reminder_enabled"
            tools:binding="@{model.enabled}"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:error="@{model.intervalError}">

            <EditText
                android:id="@+id/intervalName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{model.enabled}"
                android:hint="@string/reminder_interval_hint"
                android:inputType="numberDecimal"
                tools:binding="@{model.interval}"/>
        </android.support.design.widget.TextInputLayout>

        <SeekBar
            android:id="@+id/intervalSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="@{model.enabled}"
            android:max="@{model.maxIntervalSeekBarValue}"
            tools:binding="@{model.seekInterval}"/>

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{model.limitReminderRepeats.get() ? @string/limit_reminder_repeats_enabled : @string/limit_reminder_repeats_disabled}"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/limit_reminder_repeats_disabled"
            android:textOn="@string/limit_reminder_repeats_enabled"
            tools:binding="@{model.limitReminderRepeats}"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/repeatsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{safeUnbox(model.enabled.get()) &amp;&amp; safeUnbox(model.limitReminderRepeats.get())}"
                android:hint="@string/reminder_repeats_hint"
                android:inputType="number"
                tools:binding="@{model.repeats}"/>
        </android.support.design.widget.TextInputLayout>

        <SeekBar
            android:id="@+id/repeatsSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="@{safeUnbox(model.enabled.get()) &amp;&amp; safeUnbox(model.limitReminderRepeats.get())}"
            android:max="@{model.maxRepeats - model.minRepeats}"
            tools:binding="@{model.seekRepeats}"/>


        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{parentModel.advancedSettingsVisible.get() || model.forceWakeLock.get() ? View.VISIBLE : View.GONE}"
            android:text="@{model.forceWakeLock.get() ? @string/wakelock_enabled : @string/wakelock_disabled}"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/wakelock_disabled"
            android:textOn="@string/wakelock_enabled"
            android:visibility="@{parentModel.advancedSettingsVisible.get() || model.forceWakeLock.get() ? View.VISIBLE : View.GONE}"
            android:enabled="@{model.interval.get() &lt; model.maxIntervalForWakeLock}"
            tools:binding="@{model.forceWakeLock}"/>

    </LinearLayout>
</layout>
