<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.app.missednotificationsreminder.ui.fragment.SchedulerFragment" />
        <variable
            name="model"
            type="com.app.missednotificationsreminder.binding.model.SchedulerViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{model.enabled.get() ? @string/scheduler_enabled : @string/scheduler_disabled}"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/scheduler_disabled"
            android:textOn="@string/scheduler_enabled"
            app:binding="@{model.enabled}"/>

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{model.mode.get() ? @string/scheduler_working_period : @string/scheduler_disabled_period}"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{model.enabled}"
            android:textOff="@string/scheduler_disabled_period"
            android:textOn="@string/scheduler_working_period"
            app:binding="@{model.mode}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:error="@{model.beginError}">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{model.enabled}"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/scheduler_begin_hint"
                    android:inputType="none"
                    android:onClick="@{fragment::onBeginClicked}"
                    app:binding="@{model.beginTime}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:error="@{model.endError}">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{model.enabled}"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/scheduler_end_hint"
                    android:inputType="none"
                    android:onClick="@{fragment::onEndClicked}"
                    app:binding="@{model.endTime}"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <FrameLayout style="@style/RangeBarContainer">

            <com.appyvet.rangebar.RangeBar
                android:id="@+id/rangeBar"
                style="@style/RangeBar"
                android:layout_width="match_parent"
                android:enabled="@{model.enabled}"
                app:bindingLeft="@{model.rangeBegin}"
                app:bindingRight="@{model.rangeEnd}"
                app:tickEnd="@{model.maximum}"
                app:tickInterval="@{model.interval}"
                app:tickStart="@{model.minimum}"/>
        </FrameLayout>

    </LinearLayout>
</layout>