<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="model"
            type="com.app.missednotificationsreminder.settings.vibration.VibrationViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{model.enabled.get() ? @string/vibration_enabled : @string/vibration_disabled}"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/vibration_disabled"
            android:textOn="@string/vibration_enabled"
            tools:binding="@{model.enabled}"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:error="@{model.patternError}">

            <EditText
                android:id="@+id/patternName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{model.enabled}"
                android:hint="@string/vibration_pattern_hint"
                android:inputType="text"
                tools:binding="@{model.pattern}"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</layout>
