<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.app.missednotificationsreminder.settings.scheduler.SchedulerFragment" />

        <variable
            name="viewModel"
            type="com.app.missednotificationsreminder.settings.scheduler.SchedulerViewModel" />

        <variable
            name="viewState"
            type="androidx.lifecycle.LiveData&lt;com.app.missednotificationsreminder.settings.scheduler.SchedulerViewState&gt;" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewState.enabled ? @string/scheduler_enabled : @string/scheduler_disabled}" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{viewState.enabled}"
            android:onCheckedChanged="@{(v, checked) -> viewModel.enabledChanged(checked)}"
            android:textOff="@string/scheduler_disabled"
            android:textOn="@string/scheduler_enabled" />

        <TextView
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewState.mode ? @string/scheduler_working_period : @string/scheduler_disabled_period}" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{viewState.mode}"
            android:enabled="@{viewState.enabled}"
            android:onCheckedChanged="@{(v, checked) -> viewModel.modeChanged(checked)}"
            android:textOff="@string/scheduler_disabled_period"
            android:textOn="@string/scheduler_working_period" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewState.enabled}"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/scheduler_begin_hint"
                    android:inputType="none"
                    android:onClick="@{fragment::onBeginClicked}"
                    android:text="@{viewState.beginTime}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewState.enabled}"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/scheduler_end_hint"
                    android:inputType="none"
                    android:onClick="@{fragment::onEndClicked}"
                    android:text="@{viewState.endTime}" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rangeBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="@{viewState.enabled}"
            app:labelBehavior="gone"
            android:stepSize="1"
            android:valueFrom="@{viewState.minimum}"
            android:valueTo="@{viewState.maximum}"
            app:leftIndex="@{viewState.begin}"
            app:rightIndex="@{viewState.end}"
            app:onRangeChanged="@{viewModel::onRangeChanged}"/>

    </LinearLayout>
</layout>